@@ -16,9 +16,10 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE=""
 
-DEPEND="${PYTHON_DEPS}"
-RDEPEND="${DEPEND}
+RDEPEND="${PYTHON_DEPS}
 	>=dev-python/python-exec-0.3"
+DEPEND="${RDEPEND}
+	sys-devel/gettext"
 
 src_prepare() {
 	python_copy_sources
